Flowmini/flowmini_v24_explicit_ast/examples/pass/countdown_structured.flow
program countdown_structured

main {
    n    : int(stdin.int())
    zero : int(0)
    one  : int(1)

    while n > zero {
        print n
        n - one -> n
    }
}
