Flowmini/flowmini_v24_explicit_ast/examples/fail/bad_unterminated_block_comment.flow
program bad_unterminated_block_comment

/*
    never closed

main {
    x : int(1)
    print x
}
